feat: 搞定了shop页面的筛选，删除选中，试用选中。

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -14,8 +14,8 @@ body {
 #app {
   height: 100%;
   min-width: 1000px;
-  >div{
-    height:100%;
+  > div {
+    height: 100%;
     min-width: 1200px;
   }
 }
@@ -27,6 +27,7 @@ body {
   margin-right: 10px;
   width: 200px;
   height: calc(100% - 70px);
+  min-height: $min-main-height;
   background-color: $menu-bg;
 }
 
@@ -37,10 +38,15 @@ body {
   margin-top: 5px;
   background-color: $menu-bg;
   height: calc(100% - 70px);
+  min-height: $min-main-height;
   box-sizing: border-box;
+  > div {
+    height: 100%;
+  }
 }
 
 .common-header {
+  max-height: 90px;
   .common-header-search .el-input {
     width: 300px
   }
@@ -49,12 +55,14 @@ body {
   }
 }
 
-.block-20{
+.block-20 {
   height: 20px;
 }
-.space-10{
+
+.space-10 {
   margin: 0 5px;
 }
-.tlr{
+
+.tlr {
   text-align: right;
 }
